--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.facebook.shimmer:shimmer:0.1.0@aar'
+
 
 
 }
