Package structure refactoring

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    sourceSets {
+        main {
+            res.srcDirs = [
+                    'src/main/res-main',
+                    'src/main/res-screen/splash',
+                    'src/main/res-screen/main-photos',
+                    'src/main/res-screen/photo-detail'
+            ]
+        }
+    }
 }
 
 dependencies {
