--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
 
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.facebook.shimmer:shimmer:0.1.0@aar'
+    compile 'com.tapadoo.android:alerter:1.0.6'
+
 
 
 
